@@ -12,40 +12,40 @@
 
         <distributionManagement>
                 <repository>
-                        <id>IroniaCorp</id>
-                        <url>dav:http://www.ironiacorp.com/repo/maven2</url>
+                        <id>magsilva</id>
+                        <url>dav:http://magsilva.pro.br/repo/maven2</url>
                 </repository>
         </distributionManagement>
 
 	<dependencies>
 		<dependency>
-			<groupId>javax.xml</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>2.0EA3</version>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.3-b02</version>
 		</dependency>
 
 		<dependency>
-			<groupId>javax.xml</groupId>
+			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.1</version>
+			<version>2.3.1</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.prefuse</groupId>
-			<artifactId>prefuse</artifactId>
-			<version>beta-20071021</version>
+			<groupId>de.sciss</groupId>
+			<artifactId>prefuse-core</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>[4.11,)</version>
+			<version>[4.13,)</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.bcel</groupId>
 			<artifactId>bcel</artifactId>
-			<version>6.0-SNAPSHOT</version>
+			<version>[6.4.1,)</version>
 		</dependency>
 	</dependencies>
 
@@ -78,39 +78,18 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-webdav-jackrabbit</artifactId>
-				<version>2.4</version>
+				<version>3.3.4</version>
 			</extension>
-
+			<!--
 			<extension>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-nop</artifactId>
 				<version>1.6.6</version>
 			</extension>
+			-->
 		</extensions>
 
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
-					<finalName>jabuti</finalName>
-					<outputDirectory>${project.build.directory}</outputDirectory>
-					<archive>
-						<index>true</index>
-						<manifest>
-							<mainClass>br.jabuti.gui.JabutiGUI</mainClass>
-							<packageName>jabuti</packageName>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib</classpathPrefix>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-			</plugin>
-		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -118,41 +97,12 @@
 					<fork>true</fork>
 					<meminitial>128m</meminitial>
 					<maxmem>512m</maxmem>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<descriptors>
-                                                <descriptor>assembly.xml</descriptor>
-                                        </descriptors>
-<!--
-					<archive>
-						<index>true</index>
-						<manifest>
-							<mainClass>br.jabuti.gui.JabutiGUI</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
--->
-				</configuration>
-			        <executions>
-					<execution>
-						<phase>package</phase>
-			            		<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>javacc-maven-plugin</artifactId>
@@ -171,20 +121,63 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/target/JaBUTi/</outputDirectory>
+							<resources>
+								<resource>
+									<directory>resources</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/JaBUTi/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
-					<executable>java</executable>
-					<longClasspath>true</longClasspath>
-					<arguments>
-						<argument>-XX:MaxPermSize=128M</argument>
-						<argument>-Xmx1024M</argument>
-						<argument>-XX:-UseSplitVerifier</argument>
-						<argument>-classpath</argument>
-            			<classpath />
-					</arguments>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>br.jabuti.gui.JabutiGUI</mainClass>
+						</manifest>
+						<manifestEntries>
+							<Class-Path>.</Class-Path>
+						</manifestEntries>
+					</archive>
+					<finalName>JaBUTi/JaBUTi</finalName>
 				</configuration>
 			</plugin>
 		</plugins>
